fix squished icon

--- a/packages/app/src/app/auth/splash-screen/splash-dialog/splash-dialog.component.scss
+++ b/packages/app/src/app/auth/splash-screen/splash-dialog/splash-dialog.component.scss
@@ -20,6 +20,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex: none;  // don't squish
   margin: 0 auto 0.75rem;
   box-shadow: 0 4px 16px rgba(0, 119, 190, 0.3);
 }
@@ -28,8 +29,11 @@
   background: linear-gradient(135deg, #f44336, #e91e63);
 }
 
-.dialog-icon .mat-icon {
+.dialog-icon > .mat-icon {
   font-size: 1.75rem;
+  // override mat 24px, use increased dimensions due to font-size
+  width: fit-content;
+  height: fit-content;
   color: white;
 }
 
